<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_tips1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="5dp"
        android:text="@string/screen_timeout_tips1" />

    <TextView
        android:id="@+id/tv_tips2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tips1"
        android:gravity="start|center_vertical"
        android:padding="5dp"
        android:text="@string/screen_timeout_tips2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tips2"
        android:baselineAligned="false"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white_20percent"
            android:gravity="center"
            android:maxLength="2"
            android:text="@string/screen_timeout_default" />

        <TextView
            android:id="@+id/tv_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sec" />
    </LinearLayout>

</RelativeLayout>