<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:gravity="center"
    android:padding="10dp">

    <ListView
        android:id="@+id/lv_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:overScrollMode="never"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/layout_ops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_items"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/iv_arrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:contentDescription="@string/img_desc"
                android:minHeight="10dp"
                android:minWidth="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/yes_upper"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/iv_arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:contentDescription="@string/img_desc"
                android:minHeight="10dp"
                android:minWidth="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/no_upper"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>